[package]
name = "rgame_linux"
version = "0.1.0"
authors = ["Gil <gil.engel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.6.5"
libusb1-sys = "0.4.2"
byteorder = "1.3.4"
termion = "1.5.5"
clap = "2.33.3"